# moss-d-legacy

./: .editorconfig  .gitignore  .gitmodules  LICENSE  README.md  dscanner.ini  dub.json  meson.build  stone.yml
.github/: FUNDING.yml
.github/workflows/: d.yml
LICENSES/: Zlib.txt
data/: 00_protosnek.conf  os-release.in
data/macros/: aarch64.yml  base.yml  emul32.yml  x86.yml  x86_64.yml
data/macros/actions/: autotools.yml
data/macros/emul32/: x86_64.yml
macros/: aarch64.yml  base.yml  emul32.yml  x86.yml  x86_64.yml
macros/actions/: autotools.yml
scripts/: build.sh  test.sh
source/: main.d
source/moss/: cache.d  context.d  package.d  platform.d  store.d  util.d
source/moss/cli/: add.d  add_repo.d  buildCommand.d  extractCommand.d  extract_command.d  helpCommand.d  index_command.d  infoCommand.d  info_command.d  inspect_command.d  installCommand.d  install_command.d  list.d  list_available.d  list_installed.d  list_packages.d  package.d  processor.d  removeCommand.d  remove_command.d  search.d  update_command.d  versionCommand.d  version_command.d
source/moss/client/: activeplugin.d  cobbleplugin.d  impl.d  installation.d  installdb.d  job.d  label.d  layoutdb.d  metadb.d  package.d  progressbar.d  remoteplugin.d  remotes.d  renderer.d  sizing.d  statedb.d  systemcache.d  systemroot.d  ui.d
source/moss/client/cli/: index.d  info.d  inspect.d  install.d  list.d  list_available.d  list_installed.d  package.d  remote.d  remote_add.d  remote_list.d  remote_remove.d  remote_update.d  remove.d  search.d
source/moss/client/direct/: package.d
source/moss/controller/: archivecacher.d  cacheprocessor.d  changeprocessor.d  package.d  remote.d  rootconstructor.d
source/moss/controller/plugins/: activepackages.d  cobble.d  package.d  repo.d
source/moss/db/: cache_db.d  cachedb.d  components.d  disk.d  entry.d  interfaces.d  package.d
source/moss/db/rocksdb/: bucket.d  db.d  package.d  transform.d
source/moss/db/state/: entries.d  meta.d  package.d
source/moss/download/: cache.d  manager.d  package.d  store.d
source/moss/format/binary/: contentPayload.d  encoder.d  endianness.d  header.d  index.d  indexPayload.d  layout.d  layoutPayload.d  metaPayload.d  package.d  payload.d  reader.d  record.d  writer.d
source/moss/format/source/: buildDefinition.d  buildOptions.d  macros.d  package.d  packageDefinition.d  schema.d  script.d  sourceDefinition.d  spec.d  tuningFlag.d  tuningGroup.d  upstreamDefinition.d  ymlHelper.d
source/moss/manager/: package.d  state.d  transaction.d
source/moss/query/: candidate.d  components.d  manager.d  package.d  source.d
source/moss/storage/: cachepool.d  diskpool.d  package.d
source/moss/storage/db/: cachedb.d  cobbledb.d  installdb.d  layoutdb.d  metadata.d  metadb.d  package.d  packagesdb.d  statedb.d
source/moss/storage/db/statedb/: package.d  selection.d  state.d
subprojects/: libmoss  moss-config  moss-core  moss-db  moss-deps  moss-fetcher  moss-format  moss-vendor
